objects/OUV_Model_Map__c.object
<CustomObject>
    <label>OUV Model Map</label>
    <nameField>
        <label>Model Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OUV Model Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>OUV_Brand__c</fullName>
        <label>Brand</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Brand</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Line_Code__c</fullName>
        <label>Line Code</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Model_Code__c</fullName>
        <externalId>true</externalId>
        <label>Model Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OUV_ModelMap_Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OUV ModelMap Is Processed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>